applications/templates/filebrowser-codeployed/deprecated/openshift-templates-bkp/rstudio-root.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: rstudio-root-dynamic
metadata:
  annotations:
    description: "Start RStudio with the 'root' as username which has root permissions
      (sudo).\n\n\U0001F433 Available images with this template:\nbioconductor/bioconductor_docker:devel\nrocker/rstudio\nrocker/tidyverse\nghcr.io/maastrichtu-ids/rstudio\n\nImages
      based on rocker can be deployed: https://hub.docker.com/r/rocker/rstudio/\nVisit
      https://github.com/MaastrichtU-IDS/rstudio for more details to build and customize
      the image\n\n\U0001F4C2 Use the /root folder (workspace of the RStudio UI) to
      store your data in a persistent storage automatically created.\nYou can find
      the persistent storage in the DSRI web UI, go to Administrator view > Storage
      > Persistent Volume Claims"
    iconClass: icon-play
    kubectl.kubernetes.io/last-applied-configuration: "{\"apiVersion\":\"template.openshift.io/v1\",\"kind\":\"Template\",\"labels\":{\"template\":\"rstudio-root-dynamic\"},\"metadata\":{\"annotations\":{\"description\":\"Start
      RStudio with the rstudio user which has root permissions (sudo).\\n\\n\U0001F433
      Available images with this template:\\nbioconductor/bioconductor_docker:devel\\nrocker/rstudio\\nrocker/tidyverse\\nghcr.io/maastrichtu-ids/rstudio\\n\\nImages
      based on rocker can be deployed: https://hub.docker.com/r/rocker/rstudio/\\nVisit
      https://github.com/MaastrichtU-IDS/rstudio for more details to build and customize
      the image\\n\\n\U0001F4C2 Use the /home/rstudio folder (workspace of the RStudio
      UI) to store your data in a persistent storage automatically created.\\nYou
      can find the persistent storage in the DSRI web UI, go to Administrator view
      \\u003e Storage \\u003e Persistent Volume Claims\",\"iconClass\":\"icon-play\",\"openshift.io/display-name\":\"RStudio\",\"openshift.io/documentation-url\":\"https://maastrichtu-ids.github.io/dsri-documentation/docs/deploy-rstudio\",\"openshift.io/provider-display-name\":\"Institute
      of Data Science, UM\",\"openshift.io/support-url\":\"https://maastrichtu-ids.github.io/dsri-documentation/help\",\"tags\":\"R,rstudio,root,persistent\"},\"name\":\"rstudio-root\",\"namespace\":\"openshift\"},\"objects\":[{\"apiVersion\":\"v1\",\"kind\":\"Secret\",\"metadata\":{\"annotations\":{\"template.openshift.io/expose-password\":\"{.data['application-password']}\"},\"labels\":{\"app\":\"${APPLICATION_NAME}\"},\"name\":\"${APPLICATION_NAME}\"},\"stringData\":{\"application-password\": [...]
      on the right to see which images can be used to start RStudio\",\"displayName\":\"RStudio
      Docker image\",\"name\":\"APPLICATION_IMAGE\",\"required\":true,\"value\":\"ghcr.io/maastrichtu-ids/rstudio:latest\"},{\"description\":\"The
      password of the RStudio user.\",\"displayName\":\"RStudio password\",\"name\":\"PASSWORD\",\"required\":true},{\"description\":\"Must
      be without spaces (use -), and unique in the project.\",\"displayName\":\"Application
      name\",\"name\":\"APPLICATION_NAME\",\"required\":true,\"value\":\"rstudio\"},{\"description\":\"Size
      of the storage used for the notebook (approximate).\",\"displayName\":\"Storage
      size\",\"name\":\"STORAGE_SIZE\",\"required\":true,\"value\":\"10Gi\"},{\"description\":\"Restricting
      the number of thread allocated to OpenBLAS can speed up computations using OpenBLAS
      (leave empty for default 64)\",\"displayName\":\"Number of threads for OpenBLAS\",\"name\":\"OPENBLAS_NUM_THREADS\",\"required\":false,\"value\":\"1\"}]}\n"
    openshift.io/display-name: RStudio
    openshift.io/documentation-url: https://maastrichtu-ids.github.io/dsri-documentation/docs/deploy-rstudio
    openshift.io/provider-display-name: Institute of Data Science, UM
    openshift.io/support-url: https://maastrichtu-ids.github.io/dsri-documentation/help
    tags: R,rstudio,root,persistent
  creationTimestamp: "2021-05-27T13:58:48Z"
  name: rstudio-root
  namespace: openshift
  resourceVersion: "3784842848"
  uid: 7781dac6-9da0-4c50-ab11-567eda765729
objects:
- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      template.openshift.io/expose-password: '{.data[''application-password'']}'
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  stringData:
    application-password: ${PASSWORD}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: ${STORAGE_SIZE}
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: ${APPLICATION_NAME}
      template: rstudio-root-dynamic
    name: ${APPLICATION_NAME}
  spec:
    lookupPolicy:
      local: true
    tags:
    - from:
        kind: DockerImage
        name: ${APPLICATION_IMAGE}
      importPolicy:
        scheduled: false
      name: latest
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
          io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel: "true"
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${APPLICATION_NAME}
      spec:
        automountServiceAccountToken: false
        containers:
        - env:
          - name: USER
            value: root
          - name: PASSWORD
            valueFrom:
              secretKeyRef:
                key: application-password
                name: ${APPLICATION_NAME}
          - name: ROOT
            value: "TRUE"
          - name: RUNROOTLESS
            value: "true"
          - name: OPENBLAS_NUM_THREADS
            value: ${OPENBLAS_NUM_THREADS}
          image: ${APPLICATION_IMAGE}
          imagePullPolicy: IfNotPresent
          name: rstudio-container
          ports:
          - containerPort: 8787
            protocol: TCP
          - containerPort: 3838
            protocol: TCP
          resources:
            limits:
              cpu: "32"
              memory: 200Gi
            requests:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
          - mountPath: /root
            name: data
        runtimeClassName: selinux
        serviceAccountName: anyuid
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: false
        containerNames:
        - rstudio-container
        from:
          kind: ImageStreamTag
          name: ${APPLICATION_NAME}:latest
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    ports:
    - name: 8787-tcp
      port: 8787
      protocol: TCP
      targetPort: 8787
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    host: ""
    port:
      targetPort: 8787-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ${APPLICATION_NAME}
      weight: 100
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}-shiny
  spec:
    ports:
    - name: 3838-tcp
      port: 3838
      protocol: TCP
      targetPort: 3838
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}-shiny
  spec:
    host: ""
    port:
      targetPort: 3838-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ${APPLICATION_NAME}-shiny
      weight: 100
parameters:
- description: Check on the right to see which images can be used to start RStudio
  displayName: RStudio Docker image
  name: APPLICATION_IMAGE
  required: true
  value: ghcr.io/maastrichtu-ids/rstudio:latest
- description: The password of the RStudio user.
  displayName: RStudio password
  name: PASSWORD
  required: true
- description: Must be without spaces (use -), and unique in the project.
  displayName: Application name
  name: APPLICATION_NAME
  required: true
  value: rstudio
- description: Size of the storage used for the notebook (approximate).
  displayName: Storage size
  name: STORAGE_SIZE
  required: true
  value: 10Gi
- description: Restricting the number of thread allocated to OpenBLAS can speed up
    computations using OpenBLAS (leave empty for default 64)
  displayName: Number of threads for OpenBLAS
  name: OPENBLAS_NUM_THREADS
  value: "1"
